--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,14 @@ services: docker
 python:
   - 3.6
 
+install:
+    - pip install jinja2
+    - for i in 2.7 3.5 3.6 ; do docker pull pymor/python:$i ; done
 
 script:
     - make check
-
-# runs independent of 'script' failure/success
-#after_script:
-    #- ${DOCKER_RUN} /src/.ci/travis/after_script.bash
+    # fail if index is not up-to-date
+    - make index && git diff --exit-code
 
 notifications:
   email:
